// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components Pagination disables back link if we are on the first page 1`] = `
<Container>
  <nav
    className="mt-4"
  >
    <ul
      className="pagination justify-content-end"
    >
      <li
        className="page-item disabled"
      >
        <Component
          className="page-link"
          to="/blog/0"
        >
          <i
            className="fa fa-caret-left"
          />
        </Component>
      </li>
      <li
        className="page-item active"
        key="1"
      >
        <Component
          className="page-link"
          to="/blog/"
        >
          1
        </Component>
      </li>
      <li
        className="page-item"
        key="2"
      >
        <Component
          className="page-link"
          to="/blog/2"
        >
          2
        </Component>
      </li>
      <li
        className="page-item"
        key="3"
      >
        <Component
          className="page-link"
          to="/blog/3"
        >
          3
        </Component>
      </li>
      <li
        className="page-item"
        key="4"
      >
        <Component
          className="page-link"
          to="/blog/4"
        >
          4
        </Component>
      </li>
      <li
        className="page-item"
        key="5"
      >
        <Component
          className="page-link"
          to="/blog/5"
        >
          5
        </Component>
      </li>
      <li
        className="page-item"
      >
        <Component
          className="page-link"
          to="/blog/2"
        >
          <i
            className="fa fa-caret-right"
          />
        </Component>
      </li>
    </ul>
  </nav>
</Container>
`;

exports[`components Pagination disables next link if we are on the last page 1`] = `
<Container>
  <nav
    className="mt-4"
  >
    <ul
      className="pagination justify-content-end"
    >
      <li
        className="page-item"
      >
        <Component
          className="page-link"
          to="/blog/4"
        >
          <i
            className="fa fa-caret-left"
          />
        </Component>
      </li>
      <li
        className="page-item"
        key="1"
      >
        <Component
          className="page-link"
          to="/blog/"
        >
          1
        </Component>
      </li>
      <li
        className="page-item"
        key="2"
      >
        <Component
          className="page-link"
          to="/blog/2"
        >
          2
        </Component>
      </li>
      <li
        className="page-item"
        key="3"
      >
        <Component
          className="page-link"
          to="/blog/3"
        >
          3
        </Component>
      </li>
      <li
        className="page-item"
        key="4"
      >
        <Component
          className="page-link"
          to="/blog/4"
        >
          4
        </Component>
      </li>
      <li
        className="page-item active"
        key="5"
      >
        <Component
          className="page-link"
          to="/blog/5"
        >
          5
        </Component>
      </li>
      <li
        className="page-item disabled"
      >
        <Component
          className="page-link"
          to="/blog/6"
        >
          <i
            className="fa fa-caret-right"
          />
        </Component>
      </li>
    </ul>
  </nav>
</Container>
`;

exports[`components Pagination renders correctly 1`] = `
<Container>
  <nav
    className="mt-4"
  >
    <ul
      className="pagination justify-content-end"
    >
      <li
        className="page-item"
      >
        <Component
          className="page-link"
          to="/blog/2"
        >
          <i
            className="fa fa-caret-left"
          />
        </Component>
      </li>
      <li
        className="page-item"
        key="1"
      >
        <Component
          className="page-link"
          to="/blog/"
        >
          1
        </Component>
      </li>
      <li
        className="page-item"
        key="2"
      >
        <Component
          className="page-link"
          to="/blog/2"
        >
          2
        </Component>
      </li>
      <li
        className="page-item active"
        key="3"
      >
        <Component
          className="page-link"
          to="/blog/3"
        >
          3
        </Component>
      </li>
      <li
        className="page-item"
        key="4"
      >
        <Component
          className="page-link"
          to="/blog/4"
        >
          4
        </Component>
      </li>
      <li
        className="page-item"
        key="5"
      >
        <Component
          className="page-link"
          to="/blog/5"
        >
          5
        </Component>
      </li>
      <li
        className="page-item"
      >
        <Component
          className="page-link"
          to="/blog/4"
        >
          <i
            className="fa fa-caret-right"
          />
        </Component>
      </li>
    </ul>
  </nav>
</Container>
`;

exports[`components Pagination renders correctly if it links to the first page 1`] = `
<Container>
  <nav
    className="mt-4"
  >
    <ul
      className="pagination justify-content-end"
    >
      <li
        className="page-item"
      >
        <Component
          className="page-link"
          to="/blog/"
        >
          <i
            className="fa fa-caret-left"
          />
        </Component>
      </li>
      <li
        className="page-item"
        key="1"
      >
        <Component
          className="page-link"
          to="/blog/"
        >
          1
        </Component>
      </li>
      <li
        className="page-item active"
        key="2"
      >
        <Component
          className="page-link"
          to="/blog/2"
        >
          2
        </Component>
      </li>
      <li
        className="page-item"
        key="3"
      >
        <Component
          className="page-link"
          to="/blog/3"
        >
          3
        </Component>
      </li>
      <li
        className="page-item"
        key="4"
      >
        <Component
          className="page-link"
          to="/blog/4"
        >
          4
        </Component>
      </li>
      <li
        className="page-item"
        key="5"
      >
        <Component
          className="page-link"
          to="/blog/5"
        >
          5
        </Component>
      </li>
      <li
        className="page-item"
      >
        <Component
          className="page-link"
          to="/blog/3"
        >
          <i
            className="fa fa-caret-right"
          />
        </Component>
      </li>
    </ul>
  </nav>
</Container>
`;
